# yew-spa-skeleton

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  config.toml
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs  route.rs  utils.rs
web/src/route/: index.rs  not_found.rs  search.rs
web/static/: style.css
