[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.0.0-rc.2"
actix-web = "3"
actix-files = "0.5"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
toml = "0.5"