[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
yew = "0.19"
yew-router = "0.16"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

# gloo-storage = "0.2"